--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -1,7 +1,7 @@
 <app-page-heading [pageTitle]="TITLE" [pageDescription]="DESCRIPTION"></app-page-heading>
 <app-embedded-medium-articles></app-embedded-medium-articles>
 <!-- Main Content -->
-<header class="masthead" style="background-image: linear-gradient(to right,white,white,lightgray)">
+<header class="masthead" style="background-image: linear-gradient(to right,white,white,rgb(236, 236, 236))">
     <div class="container">
         <div class="row pb-5">
             <div class="col-lg-12 col-lg-10 mx-auto">
@@ -9,8 +9,8 @@
                     <p></p>
                 </section>
                 <h3 class="team-header pb-3 pt-3 hidden" style="color: black">WHAT IS BLOCKCHAIN?</h3>
-                <hr width="15%" style="border-width: 7px">
-                <p class="hidden pt-3" style="text-align: center">
+                <hr class="hidden emphasis">
+                <p class="hidden pt-3 pb-5" style="text-align: center">
                     <iframe width="730" height="400" src="https://www.youtube.com/embed/SSo_EIwHSd4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
                 <hr>
@@ -30,61 +30,30 @@
                     cryptography to prevent counterfeiting and fraudulent transactions. The first real-world application of blockchain technology was Bitcoin.</p>
             </div>
         </div>
-    </div>
-</header>
-<header class="masthead" style="background-image: url('img/prism.png'); background-color: black">
-    <div class="overlay" style="background-image: linear-gradient(to right,rgba(0,0,0,0.25),rgba(75,75,75,0.2),rgba(175,175,175,0.12))"></div>
-    <div class="container">
-        <div class="row pt-5 pb-5">
+        <hr>
+        <div class="row pb-5">
             <div class="col-lg-12 col-lg-10 mx-auto">
                 <section id="our-workshops">
                 </section>
-                <h3 class="team-header pb-3 pt-3 hidden">OUR WORKSHOPS</h3>
-                <hr width="15%" style="border-width: 7px">
-                <p class="hidden" style="color: white">If you are interested in attending any one of the following workshops, please check our <a style="color: white" href="events.html">events</a> page to see our upcoming workshop dates and locations.</p>
-                <h5 class="hidden" style="color: white">Blockchain Essentials Workshop</h5>
-                <p class="hidden" style="color: white">Our Blockchain Essentials Workshop is designed for people of all backgrounds. This two-hour workshop gives a crash-course on everything related to blockchain and cryptocurrencies, from the genesis of Bitcoin to the innovations happening
+                <h3 class="section-heading pb-3 pt-3 hidden">OUR WORKSHOPS</h3>
+                <hr class="hidden emphasis">
+                <p class="hidden">If you are interested in attending any one of the following workshops, please check our <a class="hyperlink" href="events.html">events</a> page to see our upcoming workshop dates and locations.</p>
+                <h5 class="hidden">Blockchain Essentials Workshop</h5>
+                <p class="hidden">Our Blockchain Essentials Workshop is designed for people of all backgrounds. This two-hour workshop gives a crash-course on everything related to blockchain and cryptocurrencies, from the genesis of Bitcoin to the innovations happening
                     in the blockchain space right now.</p>
-                <h5 class="hidden" style="color: white">Hyperledger Composer Development Workshop</h5>
-                <p class="hidden" style="color: white">If you are interested in learning how to develop blockchain applications and business networks, consider attending one of our Hyperledger Composer Development Workshops. <a style="color: white" href="https://hyperledger.github.io/composer/v0.19/introduction/introduction">Hyperledger
+                <h5 class="hidden">Hyperledger Composer Development Workshop</h5>
+                <p class="hidden">If you are interested in learning how to develop blockchain applications and business networks, consider attending one of our Hyperledger Composer Development Workshops. <a class="hyperlink" href="https://hyperledger.github.io/composer/v0.19/introduction/introduction">Hyperledger
               Composer</a> is a set of tools developed by the Linux Foundation in collaboration with IBM for building business blockchain networks, allowing business owners and developers to solve business problems simply and efficiently.
                 </p>
-                <h5 class="hidden" style="color: white">IBM Blockchain Essentials Online Course</h5>
-                <p class="hidden" style="color: white">This 3-hour online course developed by IBM will help you understand blockchain technology and how it can solve business problems. You will also learn the basics of developing applications with chaincode. Use this
-                    <a style="color: white" href="https://cognitiveclass.ai/courses/blockchain-course/">link</a> to access the course.
+                <h5 class="hidden">IBM Blockchain Essentials Online Course</h5>
+                <p class="hidden">This 3-hour online course developed by IBM will help you understand blockchain technology and how it can solve business problems. You will also learn the basics of developing applications with chaincode. Use this
+                    <a class="hyperlink" href="https://cognitiveclass.ai/courses/blockchain-course/">link</a> to access the course.
                 </p>
-                <h5 class="hidden" style="color: white">IBM Blockchain Foundation Developer Online Course</h5>
-                <p class="hidden" style="color: white">In this 6-hour online course, you'll get a more detailed picture of the components and structures of blockchain business networks, such as ledgers, smart contracts, consensus, certificate authorities, security, roles, transaction processes,
+                <h5 class="hidden">IBM Blockchain Foundation Developer Online Course</h5>
+                <p class="hidden">In this 6-hour online course, you'll get a more detailed picture of the components and structures of blockchain business networks, such as ledgers, smart contracts, consensus, certificate authorities, security, roles, transaction processes,
                     participants, and fabrics. This course is for developers who understand object-oriented programming and can use the command line. It is highly recommended that you complete the IBM Blockchain Essentials Online Course before tackling
-                    this course. Use this <a style="color: white" href="https://cognitiveclass.ai/courses/ibm-blockchain-foundation-dev/">link</a> to access the course.</p>
+                    this course. Use this <a class="hyperlink" href="https://cognitiveclass.ai/courses/ibm-blockchain-foundation-dev/">link</a> to access the course.</p>
             </div>
         </div>
     </div>
 </header>
-<div class="container">
-    <div class="row mt-2">
-        <div class="col-lg-12 col-lg-10 mx-auto">
-            <section id="blockchain-foundations-and-applications">
-            </section>
-            <h2 class="section-heading hidden" style="font-size: 27px">
-                <b>MGT 491 SEC 002:</b> BLOCKCHAIN: FOUNDATIONS AND APPLICATIONS
-            </h2>
-            <div class="pic_row hidden">
-                <a target="_blank">
-                    <div>
-                        <p>MGT 491 Sec 002 is the first ever for-credit blockchain course offered at Michigan State University. Blockchain: Foundations and Applications is taught by Neil Kane, Director of Undergraduate Entrepreneurship at MSU and one of
-                            our faculty advisors. The comprehensive course covers both the technology behind blockchain and the multiple opportunities for its application, giving students an excellent foundation into understanding what blockchain is and
-                            how it may be applied. The course features a series of lectures and interactive sessions taught by faculty from entrepreneurship, law, computer science, economics, accounting and supply chain management, among others. The course
-                            is currently offered during Fall semesters at Michigan State University.</p>
-                    </div>
-                </a>
-                <a target="_blank" class="pic_item">
-                    <div>
-                        <img src="img/neil.jpg" style="border-radius: 20%; padding: 50px 40px 50px 40px; height: 350px" />
-
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
